# semantic-integration-by-Rust

./: .gitignore  Cargo.toml  README.md  morphemes.csv  vocabulary.json
results/: report_Dialectic.json  report_Narrative.json  report_morpheme_test.json
src/: main.rs
